# muleta-cognitiva

./: .gitignore  Makefile  README.md  README_video_to_text.md  index.html  pyproject.toml  start_api.sh  video_to_text.sh
api/: database.py
api/tests/: test_basic_imports.py  test_database.py  test_migrate_memory.py
docs/: Arquitetura do Sistema.md  Guia de troubleshooting.md  Módulos do sistema.md  UI-documentation.md  database-and-migration.md  design-proposal-mcp-server-implementation.md  development-progress.md  enhanced-web-interface.md  fastapi-server-implementation.md  llm-integration.md  mcp-server.md  overview.md  step6-implementation-summary.md  task-development-plan.md
migrations/: 001_initial.sql
scripts/: serve_web.py  validate_web_interface.py
src/api/: config.py  content_processor.py  database.py  fallback_extractor.py  llm_client.py  main.py  mcp_server.py  migrations.py  prompts.py  response_parser.py  schemas.py
src/api/scripts/: migrate_memory.py
src/tests/: test_api.py  test_api_integration.py  test_config.py  test_content_processor.py  test_fallback_extractor.py  test_llm_client.py  test_llm_client_new.py  test_mcp_server.py  test_response_parser.py  test_web_interface.py  test_web_interface_basic.py  test_web_interface_playwright.py
