[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pytest[test]>=8.4.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
    "selenium>=4.23,<5",
    "requests>=2.32.0",
    "anthropic>=0.39.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
